# Docferry-Obsidian-Plugin

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  eslint.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json  versions.json
cli/: README.md  docferry.py
server/: .env.example  .env.production.example  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
server/app/: __init__.py  config.py  cos_sts.py  database.py  encryption.py  errors.py  logging.py  main.py  markdown.py  metadata_security.py  models.py  schemas.py  security.py  storage.py  viewer.py
server/deploy/: CLOUD_RELEASE_CHECKLIST.md  docferry-api.service.example  docferry-maintenance.service.example  docferry-maintenance.timer.example  nginx-docferry.example.conf.example
server/migrations/: env.py
server/migrations/versions/: 0001_initial.py  0002_share_access_events.py  0003_assets.py  0004_share_links.py  0005_snapshot_assets.py  0006_system_events.py  0007_synapsehub_auth.py  0007_user_tokens.py  0008_metadata_encryption.py  0009_cloud_claims.py  0010_free_quota_five.py  0011_merge_cloud_synapse.py
server/scripts/: backfill_metadata_encryption.py  backup_docferry.py  complex_regression.py  gc_access_events.py  gc_assets.py  issue_cloud_token.py  prune_backups.py  real_vault_regression.py  restore_drill.py  run_maintenance.py  smoke_test.py
server/tests/: test_api.py  test_cli_import.py  test_complex_regression.py  test_operations_scripts.py  test_real_vault_regression.py
server/tests/fixtures/: complex-share-note.md
(+48 files in other folders)
