[project]
name = "docferry-share-server"
version = "0.0.1"
description = "Self-hosted FastAPI service for single-note Obsidian share links."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "argon2-cffi>=23.1.0",
  "cryptography>=42.0.0",
  "fastapi>=0.115.0",
  "markdown-it-py>=3.0.0",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
